Updated the plots
Added epsilons, added backgrounds for readability changed ylabel

--- a/Code/Tests/Cluster_weight.ipynb
+++ b/Code/Tests/Cluster_weight.ipynb
@@ -277,7 +277,7 @@
    "source": [
     "w = 0.75*setup_plots.textwidth\n",
     "fig, ax = plt.subplots(figsize=(w, 2/3*w))\n",
-    "plt.plot(cost_orig,err_orig,'1-',label='regualar system')\n",
+    "plt.plot(cost_orig,err_orig,'1-',label='regular system')\n",
     "plt.plot(cost_per,err_per,'2--',label='permuted system')\n",
     "ylims = ax.get_ylim()\n",
     "plt.vlines(T.size,ylims[0],ylims[1],colors='0.4')\n",
@@ -291,7 +291,7 @@
     "\n",
     "\n",
     "plt.xlabel(\"Number of multiplications\")\n",
-    "plt.ylabel(r'$\\| A-\\tilde{A} \\| $')\n",
+    "plt.ylabel(r'$\\| M-\\tilde{T} \\| $')\n",
     "\n",
     "zoom_h = 1\n",
     "zoom_w = 3e5\n",
@@ -307,8 +307,16 @@
     "axins.set_xticklabels([])\n",
     "axins.set_yticklabels([])\n",
     "\n",
+    "\n",
+    "text = ax.text(cost_orig[0]-3e5,err_orig[0]+0.7, r'$\\epsilon = 0$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
+    "text = ax.text(cost_orig[-1]+1.1e5,err_orig[-1]-.5, r'$\\epsilon = \\|M\\|_H$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
+    "\n",
+    "\n",
     "ax.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
-    "axins.text(cost_orig[i]-0.2*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
+    "axins.text(cost_orig[i]-0.15*zoom_w,err_orig[i]+0.3*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|M\\|_H$',\n",
+    "          bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
     "plt.savefig(\"perm_example_mobilenet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
     "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
     "print(bbox.width/setup_plots.textwidth)"
@@ -326,6 +334,17 @@
     "print(\"Cost original=\",cost_orig[i])\n",
     "print(\"Cost new=\",cost_per[i])\n",
     "print(\"Cost new/Cost orig=\",cost_per[i]/cost_orig[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 2\n",
+    "print(\"eps * K = \",eps[n]*len(sys.dims_in))\n",
+    "print(\"err =\",err_orig[n])"
    ]
   },
   {
