--- a/Code/Tests/Movement_weight.ipynb
+++ b/Code/Tests/Movement_weight.ipynb
@@ -736,11 +736,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = np.load('AlexNet/data_error.npz')\n",
+    "err_orig=data[\"err_orig\"]\n",
+    "cost_orig=data[\"cost_orig\"]\n",
+    "err_move=data[\"err_move\"]\n",
+    "cost_move=data[\"cost_move\"]\n",
+    "err_new=data[\"err_new\"]\n",
+    "cost_new=data[\"cost_new\"]\n",
+    "N=9\n",
+    "alpha = np.linspace(0,1,N)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "w = 0.75*setup_plots.textwidth\n",
     "fig, ax = plt.subplots(figsize=(w, 2/3*w))\n",
     "plt.plot(cost_orig,err_orig,'1-',label='initial segmentation')\n",
     "plt.plot(cost_move,err_move,'2--',label='adapted segmentation')\n",
-    "plt.plot(cost_new,err_new,'3:',label='reidentified system')\n",
+    "plt.plot(cost_new,err_new,'3:',label='recomputed system')\n",
     "ylims = ax.get_ylim()\n",
     "plt.vlines(mat_AlexNet.size,ylims[0],ylims[1],colors='0.4')\n",
     "ax.set_ylim(ylims)\n",
@@ -752,7 +769,7 @@
     "\n",
     "\n",
     "plt.xlabel(\"Number of multiplications\")\n",
-    "plt.ylabel(r'$\\| A-\\tilde{A} \\| $')\n",
+    "plt.ylabel(r'$\\| M-\\tilde{T} \\| $')\n",
     "\n",
     "zoom_h = 0.3\n",
     "zoom_w = 8e6\n",
@@ -769,8 +786,14 @@
     "axins.set_xticklabels([])\n",
     "axins.set_yticklabels([])\n",
     "\n",
+    "text = ax.text(cost_orig[0]-11e6,err_orig[0]+0.43, r'$\\epsilon = 0$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 1,\"linewidth\":0})\n",
+    "text = ax.text(cost_orig[-1]+3.5e6,err_orig[-1]-.4, r'$\\epsilon = \\|M\\|_H$',\n",
+    "                  bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 0,\"linewidth\":0})\n",
+    "\n",
     "ax.indicate_inset_zoom(axins, edgecolor=\"black\")\n",
-    "axins.text(cost_move[i]-0.05*zoom_w,err_move[i]+0.2*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|A\\|_H$',)\n",
+    "axins.text(cost_move[i]-0.11*zoom_w,err_move[i]+0.2*zoom_h, r'$\\epsilon = \\frac{1}{4} \\|M\\|_H$',\n",
+    "          bbox={'facecolor': 'white',\"edgecolor\":\"black\", 'alpha': 0.5, 'pad': 1,\"linewidth\":0})\n",
     "plt.savefig(\"move_example_alexnet_error.pdf\",bbox=\"tight\",bbox_inches = 'tight')\n",
     "bbox = plt.gcf().get_tightbbox( plt.gcf().canvas.get_renderer()) \n",
     "print(bbox.width/setup_plots.textwidth)"
@@ -820,7 +843,10 @@
    "source": [
     "print(\"Cost original=\",cost_orig[i])\n",
     "print(\"Cost new=\",cost_new[i])\n",
-    "print(\"Cost new/Cost orig=\",cost_new[i]/cost_orig[i])"
+    "\n",
+    "print(\"Cost move/Cost orig=\",cost_move[i]/cost_orig[i],(1-cost_move[i]/cost_orig[i])*100,\"%\")\n",
+    "\n",
+    "print(\"Cost new/Cost orig=\",cost_new[i]/cost_orig[i],(1-cost_new[i]/cost_orig[i])*100,\"%\")"
    ]
   },
   {
